# SeqPlotter

./: LICENSE.txt  README.md  setup.cfg
docs/: SeqPlotter_tutorial.ipynb
src/SeqPlotter/: nt.py  prot.py  sequence.py
src/seqplotter/: __init__.py  nucl.py  prot.py  sequence.py
src/seqplotter_analysis/: __init__.py  hydrophobicity_plot.py  pca.py  seq_logo.py
