[metadata]
name = SeqPlotter
version = 0.2.0
author = Rajan
author_email = rajanbit.email@gmail.com
description = Python package for sequence data analysis and visualization
long_description = file: README.md, LICENSE.txt
long_description_content_type = markdown/text
url = https://github.com/rajanbit/SeqPlotter
project_urls =
	Bug Tracker = https://github.com/rajanbit/SeqPlotter/issues
	repository = https://github.com/rajanbit/SeqPlotter
license = MIT License
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
	matplotlib >=3.7.2
	numpy >=1.24.2
	pandas >=2.0.0
package_dir = 
	= src

[options.packages.find]
where = src
